--- a/resources/scss/settings/_type.scss
+++ b/resources/scss/settings/_type.scss
@@ -1,32 +1,34 @@
-$font-family:				'Nunito sans', sans-serif;
-$sans-font-family:			'Nunito sans', sans-serif;
-$serif-font-family:			'Lora', serif;
+$font-family: "Nunito sans", sans-serif;
+$alt-font-family: "Nunito sans", sans-serif;
+
 //$med-font-family:			'acherusgrotesque-medium', sans-serif;
 //$bold-font-family:		'acherusgrotesque-bold', sans-serif;
 //$italic-font-family:		'acherusgrotesque-regularitalic', sans-serif;
 
-$mono-font-family:      	Menlo, Monaco, Consolas, "Courier New", monospace;
+$mono-font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
 
-
-$base-font-family:			$font-family;
-$base-font-size:			16px;
-$base-font-style:			normal;
-$base-font-weight:			400;
-
+$base-font-family: $font-family;
+$base-font-size: 16px;
+$base-font-style: normal;
+$base-font-weight: 400;
 
 // Font Weights
-$bold-font-weight:			800;
-$mid-font-weight:			700;
-$normal-font-weight:		400;
-$light-font-weight:			300;
+$bold-font-weight: 800;
+$mid-font-weight: 700;
+$normal-font-weight: 400;
+$light-font-weight: 300;
 
 // Headings
-$headings-font-family:	    $sans-font-family;
-$headings-font-weight:		$bold-font-weight;
+$headings-font-family: $alt-font-family;
+$headings-font-weight: $bold-font-weight;
+
+// Body
+$body-font-family: $font-family;
+$body-font-weight: $normal-font-weight;
 
 // Buttons
-$button-font-family:		$sans-font-family;
+$button-font-family: $alt-font-family;
 
 // Navigation
-$nav-font-family:		  	$sans-font-family;
-$nav-font-weight:			$mid-font-weight;
+$nav-font-family: $alt-font-family;
+$nav-font-weight: $mid-font-weight;
