--- a/resources/scss/components/__index.scss
+++ b/resources/scss/components/__index.scss
@@ -10,33 +10,34 @@
 /// @link   https:spigotdesign.com
 ////
 
-@import 'app';
-@import 'app-content';
-@import 'app-footer';
-@import 'app-header';
-@import 'app-main';
-@import 'app-search';
-@import 'archive-header';
-@import 'buttons';
-@import 'cards';
-@import 'comments';
-@import 'comment';
-@import 'comment-respond';
-@import 'entry';
-@import 'events';
-@import 'gallery';
-@import 'media-meta';
-@import 'images';
-@import 'map';
-@import 'nav-menu';
-@import 'nav-pagination';
-@import 'nav-toggle';
-@import 'notices';
-@import 'page-builder';
-@import 'page-head';
-@import 'post-list';
-@import 'post-nav';
-@import 'promo-bar';
-@import 'ribbons';
-@import 'sidebar';
-@import 'widget';
+@import "app";
+@import "app-content";
+@import "app-footer";
+@import "app-header";
+@import "app-main";
+@import "app-search";
+@import "archive-header";
+@import "buttons";
+@import "cards";
+@import "comments";
+@import "comment";
+@import "comment-respond";
+@import "entry";
+@import "events";
+@import "gallery";
+@import "media-meta";
+@import "images";
+@import "map";
+@import "nav-menu";
+@import "nav-pagination";
+@import "nav-toggle";
+@import "notices";
+@import "page-builder";
+@import "page-head";
+@import "post-list";
+@import "post-nav";
+@import "promo-bar";
+@import "ribbons";
+@import "sidebar";
+@import "tooltips";
+@import "widget";
