--- a/resources/scss/components/_events.scss
+++ b/resources/scss/components/_events.scss
@@ -44,7 +44,7 @@ h2.tribe-events-schedule__datetime {
 .tribe-common-b2,
 .tribe-common-b3,
 .tribe-events-calendar-list__event-date-tag-weekday {
-    font-family: $sans-font-family !important;
+    font-family: $font-family !important;
 }
 
 .tribe-common h1,
@@ -61,7 +61,7 @@ h2.tribe-events-schedule__datetime {
 
 .tribe-common-c-btn {
     background-color: $blue !important;
-    font-family: $sans-font-family !important;
+    font-family: $font-family !important;
 }
 
 .tribe-common .tribe-common-g-row--gutters {
