--- a/resources/scss/components/_nav-toggle.scss
+++ b/resources/scss/components/_nav-toggle.scss
@@ -24,7 +24,7 @@ $toggle-color-active: $blue-darker;
   border: 0;
   margin: 0;
   overflow: visible;
-  font-family: $sans-font-family;
+  font-family: $font-family;
 
   position: absolute;
   right: $margin/2;
