--- a/resources/scss/components/_promo-bar.scss
+++ b/resources/scss/components/_promo-bar.scss
@@ -2,40 +2,46 @@
 
 // Header Push
 .app-header {
-    .page-template-landing.admin-bar.dwpb-push-page & {
-        @include mq(desktop-nav) {
-            top: 0;
-        }
+  .page-template-landing.admin-bar.dwpb-push-page & {
+    @include mq(desktop-nav) {
+      top: 0;
     }
+  }
+}
+
+#dwpb {
+  font-family: $font-family !important;
+  font-weight: $mid-font-weight;
 }
 
 .dwpb-push-page {
-    &:not(.dwpb-allow-close):not(.dwpb-open):not(.admin-bar) {
-
-    	@include mq(mobile-nav) {
-            .menu--secondary {
-                padding-right: $margin * 1.5;
-            }
-        }
-        
-        @include mq(desktop-nav) {
-            .menu--secondary {
-                padding-right: $margin;
-            }
-        }
+  &:not(.dwpb-allow-close):not(.dwpb-open):not(.admin-bar) {
+    @include mq(mobile-nav) {
+      .menu--secondary {
+        padding-right: $margin * 1.5;
+      }
     }
 
-    &not(.dwpb-open) {
-        
+    @include mq(desktop-nav) {
+      .menu--secondary {
+        padding-right: $margin;
+      }
     }
+  }
+
+  &not(.dwpb-open) {
+  }
 }
 
-.dwpb-allow-close {}
+.dwpb-allow-close {
+}
 
-.dwpb-open {}
+.dwpb-open {
+}
 
 .fl-builder-edit {
-    .dwpb-action, #dwpb {
-        display: none;
-    }
+  .dwpb-action,
+  #dwpb {
+    display: none;
+  }
 }
