--- a/resources/scss/elements/_paragraphs.scss
+++ b/resources/scss/elements/_paragraphs.scss
@@ -2,22 +2,22 @@
 
 p {
   margin-bottom: 1.5rem;
-  font-family: $sans-font-family;
+  font-family: $body-font-family;
   @include font-size(18px);
 
   .entry__content & {
-
-  	&:last-child {
-  		//margin-bottom: 0;
-  	}
+    &:last-child {
+      //margin-bottom: 0;
+    }
   }
 
   strong {
-  	font-weight: bold;
+    font-weight: $bold-font-weight;
   }
 
-  em, i {
-    font-family: $serif-font-family;
+  em,
+  i {
+    font-family: $font-family;
     font-style: italic;
   }
 }
