--- a/resources/scss/settings/_colors.scss
+++ b/resources/scss/settings/_colors.scss
@@ -18,23 +18,24 @@ $gray-lighter: #c2c8cc;
 $gray-lightest: #f8f9f9;
 
 // Colors
-$blue: #1c5589; // set  1C5589
-$blue-light: #1f67a3; // set  1F67A3
+$blue: #1c5589;
+$blue-light: #1f67a3;
 $blue-lightest: #f3f9fa;
-$blue-dark: #0b3356; // set
-$blue-darker: #05233f; // set
-$blue-darkest: #05233f; // set
-$teal: #419db9; // Set
+$blue-dark: #0b3356;
+$blue-darker: #05233f;
+$blue-darkest: #05233f;
+$teal: #419db9;
 $teal-light: #52c0e3;
-$shadow-blue: #354558; // set
+$shadow-blue: #354558;
 $purple: #a85ece;
-$red: #c51b0b; // set
-$red-dark: #812d31; // set
+$purple-darkest: #0f0b2e;
+$red: #c51b0b;
+$red-dark: #812d31;
 $green: #3aaa47;
 $green-dark: #2c8e44;
-$yellow: #f9c626; // set
+$yellow: #f9c626;
 
-$tan: #f2ddb8; // #ccc7b9
+$tan: #f2ddb8;
 $tan-light: #fefdf8;
 
 // Corporate Colors
@@ -101,7 +102,11 @@ $footer-copyright-color: #71889d;
 $border-color: darken($gray-lightest, 5%);
 $nav-border-color: rgba($blue, 0.75);
 
-// Miss
+// Tooltips
+$tooltip-color: $white;
+$tooltip-bg-color: $purple-darkest;
+
+// Misc
 $boxshadow-color: $black;
 
 /// Returns an map of colors in name-value format. This function also merges
